# jpp

./: .gitignore  .travis.yml  FAQ.md  README.md  VERSION.md  appveyor.yml  create.sh  something.json
cmake/: LinCompilerFlags.txt  LinMakeLists.txt  WinCompilerFlags.txt  WinMakeLists.txt
libs/: CMakeLists.txt
libs/googletest/: CMakeLists.txt
libs/googletest/src/: CMakeLists.txt  gtest-all.cc
libs/jpp/: CMakeLists.txt  Jpp.h
src/: CMakeLists.txt  main.cpp
